[package]
name = "gitignore"
version = "0.1.0"
authors = ["danitrod <danitrod@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.9.0", features = ["attributes"]}
async-trait = "0.1.50"
clap = "3.0.0-beta.2"
futures = "0.3.15"
scraper = "0.12.0"
surf = "2.2.0"
termcolor = "1.1.2"
