[package]
name = "gignore"
version = "0.1.0"
authors = ["Daniel T. Rodrigues <danitrod@outlook.com>"]
license = "MIT"
description = "A command line tool to generate gitignore template files"
readme = "README.md"
homepage = "https://github.com/danitrod/gignore/"
repository = "https://github.com/danitrod/gignore/"
keywords = ["cli", "gitignore", "git"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.9.0", features = ["attributes"]}
async-trait = "0.1.50"
clap = "3.0.0-beta.2"
futures = "0.3.15"
scraper = "0.12.0"
surf = "2.2.0"
termcolor = "1.1.2"
